# grimoire

./: .gitignore  LICENSE  README.md
src/api/: Cargo.toml  schema.sql
src/api/src/: db.rs  main.rs
src/app/: package.json  pnpm-lock.yaml  vite.config.ts
src/app/src/: app.css  app.tsx  entry-client.tsx  types.tsx
src/app/src/components/: Article.tsx  Edit.tsx  Login.tsx  Nav.tsx  Post.tsx  PostList.tsx  Tag.tsx  TagBadge.tsx  TagList.tsx
src/app/src/lib/: server_functions.tsx
src/app/src/routes/: index.tsx
