[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
env_logger = "0.11.8"
hex = "0.4.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
slugify = "0.1.0"
